--- a/about.html
+++ b/about.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,8 +18,15 @@
     <title>e-learning-platform</title>
   </head>
   <body>
-        <header>
-          <a href="#" class="logo">RICHES</a><span class="dot">.</span></a>
+    <header class="topnav bg-dark d-flex justify-content-end p-1 m-1">
+      <div class="about-header-links p-1">
+        <a class="p-3 text-white" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+        <a class="p-1 text-white" href="#"><i class="fa-brands fa-youtube"></i></a>
+        <a class="p-3 text-white" href="#">Logout</a>
+      </div>
+    </header>
+        <nav class="mt-5">
+          <a href="index.html" class="logo">RICHES</a><span class="dot">.</span></a>
           <div class="menuToggle toggler">
           
             <div class="hamburger"></div>
@@ -32,25 +38,25 @@
               <li><a href="about.html"  class="toggler">about</a></li>
               <li><a href="#alumnis" class="toggler">alumnis</a></li>
           </ul>
-      </header>
+        </nav>
       <main class="topmost">
         <section class="headercontent" >
           <section class="header-bg">
             <div class="mt-5 container first-div justify-content-center align-items-center p-3 pt-5" >
-              <h3 class="greeting">hi There,</h3>
+              <h3 class="greeting">Hi There,</h3>
               <h1 class="title titlewidth">
                 The Best E-learning Platform!
               </h1>
               <div class="card mt-4 mt-m-5">
                 <div class="card-body">
-                  <h6 class="text card-text grey">
+                  <p class="text card-text grey lead">
                     Quality education does not need to be in the traditional classroom setting, we are an organisation that is passionate about technology and we are fully committed to investing in the world of technology, join many around the world to learn from the comfort of your home. Save up to 75% with a scholarship. 
-                  </h6>
+                  </p>
                 </div>
               </div>
               <div class="mt-3 mt-m-5 mb-m-4">
-                <h6 class="grey">Please contact us for any question or further enquiries</h6>
-                <h6 class="grey">riches@gmail.com</h6>
+                <p class="grey lead">Please contact us for any question or further enquiries</p>
+                <p class="grey lead">riches@gmail.com</p>
               </div>
             </div>
             </section>
@@ -94,7 +100,7 @@
     </div>
      </section>
 
-     <footer class="p-5 bg-md-dark">
+     <footer class="p-5 about-footer">
       <div class=" w-75 d-flex justify-content-start m-auto">
         <div class="d-flex justify-content-start mx-1 px-5">
         <img src="assets/icons/logo.jpg" class=" w-25 m-auto">
@@ -105,7 +111,8 @@
         </div>
         <div class="w-75">
           <p class="text-dark text-lg-white px-5">@2022 a global web development institution</p>
-          <p class="text-dark text-lg-white px-5 mt-0">call us on: +233-90-98-7789-34 or email us at e-learning@gmail.com. We will be glad to hear from you!</p></div>
+          <p class="text-dark text-lg-white px-5 mt-0">call us on: +233-90-98-7789-34 or email us at e-learning@gmail.com. We will be glad to hear from you!</p>
+        </div>
       </div>
      </footer>
 
