--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,42 +22,46 @@
     <title>e-learning-platformm</title>
   </head>
   <body>
-      <header>
+    <header class="topnav bg-dark d-flex justify-content-end p-1 m-1">
+      <div class="header-links p-1">
+        <a class="p-3 text-white" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+        <a class="p-1 text-white" href="#"><i class="fa-brands fa-youtube"></i></a>
+        <a class="p-3 text-white" href="#">Logout</a>
+      </div>
+    </header>
+      <nav class="p-5 mt-2">
         <a href="#" class="logo">RICHES</a>
-        <div class="menuToggle toggler">
-          
+        <div class="menuToggle toggler"> 
         <div class="hamburger"></div>
         <div class="hamburger"></div>
         <div class="hamburger"></div>
         </div>
-        <!-- <div> -->
-      <!-- </div> -->
         <ul class="navigation">
             <li><a href="#" class="toggler">home</a></li>
             <li><a href="about.html"  class="toggler">about</a></li>
             <li><a href="#courses" class="toggler">courses</a></li>
         </ul>
-    </header>
+      </nav>
     <main class="" >
       <section class="headercontent">
         <div class="header-bg ">
             <div class=" first-div container justify-content-center justify-content-md-start pt-5">
-              <h3 class="greeting">hi There,</h3>
+              <h3 class="greeting">Hi There,</h3>
               <h1 class="title titlewidth">
                 The Best E-learning Platform!
               </h1>
               <div class="card mt-4 w-75">
                 <div class="banner-card shadow">
                   <div class="card-body">
-                    <h4 class="text card-text">
+                    <p class="text card-text lead">
                       Riches online learning is the simplest e-learning platform.
-                    </h4>
+                    </p>
                     </div>
                     </div>
               </div>
               <div class="mt-3 mt-lg-4 ">
-                <h3 class="text1 grey">You can learn Anytime and Anywhere.</h3>
-                <h4 class="text2 grey">So lets start learning web development.</h4>
+                <p class="text1 grey lead">You can learn Anytime and Anywhere.</p>
+                <p class="text2 grey lead">So lets start learning web development.</p>
               </div>
               </div>
               </div>
@@ -75,8 +78,8 @@
               <div class="card-body bg-dark">
                   <div class="row text-white">
                   <img src="assets/icons/react.png" class="bg col-3 img-fluid" alt="">
-                  <p class="card-text col-3 technology m-auto">React</p>
-                  <h6 class="col-6 m-auto texter">learn and become a world class frontend developer with our popular frontend frameworks.</h6>
+                  <h6 class="card-text col-3 technology m-auto">React</h6>
+                  <p class="col-6 m-auto texter">learn and become a world class frontend developer with our popular frontend frameworks.</p>
                   </div>
               </div>
             </div>
@@ -87,8 +90,8 @@
                   <div class="card-body bg-dark">
                       <div class="row text-white">
                       <img src="assets/icons/angular.png" class="bg col-3 img-fluid" alt="" />
-                      <p class="card-text col-3 technology m-auto">Angula</p>
-                      <h6 class="col-6 m-auto">learn and become a world class frontend developer with our popular frontend frameworks.</h6>
+                      <h6 class="card-text col-3 technology m-auto">Angula</h6>
+                      <p class="col-6 m-auto">learn and become a world class frontend developer with our popular frontend frameworks.</p>
                       </div>
                   </div>
                 </div>
@@ -98,8 +101,8 @@
                   <div class="card-body bg-dark">
                       <div class="row text-white">
                       <img src="assets/icons/html.png" class="bg col-3 img-fluid" alt="" />
-                      <p class="card-text col-3 technology  m-auto">html and css</p>
-                      <h6 class="col-6 m-auto">learn and become a world class frontend developer with our popular frontend frameworks.</h6>
+                      <h6 class="card-text col-3 technology  m-auto">html and css</h6>
+                      <p class="col-6 m-auto">learn and become a world class frontend developer with our popular frontend frameworks.</p>
                       </div>
                   </div>
                 </div>
@@ -109,8 +112,8 @@
                   <div class="card-body bg-dark">
                       <div class="row text-white">
                       <img src="assets/icons/node.png" class="bg col-3 img-fluid" alt="" />
-                      <p class="card-text col-3 technology  m-auto">nodejs</p>
-                      <h6 class="col-6 m-auto">learn and become a world class backtend developer with our popular frontend frameworks.</h6>
+                      <h6 class="card-text col-3 technology  m-auto">nodejs</h6>
+                      <p class="col-6 m-auto">learn and become a world class backtend developer with our popular frontend frameworks.</p>
                       </div>
                   </div>
                 </div>
@@ -120,8 +123,8 @@
                   <div class="card-body bg-dark">
                       <div class="row justify-content-between text-white">
                       <img src="assets/icons/rails.jpg" class="col-3" alt="" />
-                      <small class="card-text col-3 technology m-auto">Ruby & Rails</small>
-                      <h6 class="col-6 m-auto">learn and become a world class frontend developer with our popular frontend frameworks.</h6>
+                      <h6 class="card-text col-3 technology m-auto">Ruby & Rails</h6>
+                      <p class="col-6 m-auto">learn and become a world class frontend developer with our popular frontend frameworks.</p>
                       </div>
                   </div>
                 </div>
@@ -220,13 +223,7 @@
                 </div>  
               </div>
             </div>
-            </div>
-             <div class="d-grid gap-2 mt-5">
-              <button class="btn btn-outline-secondary" disabled type="button">MORE 
-                <i class="fa fa-angle-down chevron p-2"></i>
-              </button>
-
-            </div>  
+            </div> 
                </section>
                  <section class="d-none d-md-block p-3 w-75 m-auto">
                     <h2 class="text-dark text-center">Our Lecturers</h2>
@@ -332,7 +329,7 @@
                 </div>
                  </section>
 
-                 <footer class="p-5 d-none d-md-block bg-white">
+                 <footer class="p-5 d-none d-md-block">
                   <div class=" w-75 d-flex justify-content-start m-auto">
                     <div class="d-flex justify-content-start mx-1 px-5">
                     <img src="assets/icons/logo.jpg" class=" w-25 m-auto">
@@ -349,9 +346,6 @@
     </section>
     </main>
     <script src="hamburger.js"></script>
-
-
-    <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
